apps/sonarr/base/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: sonarr
  ports:
  - port: 8989
    targetPort: 8989
    protocol: TCP
    name: http
